--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,8 +257,7 @@ h6 {
 
 #hero .hero-container {
   position: relative;
-  left: -85px;
-  top: 290px;
+  top: 50%;
   z-index: 2;
   min-width: 300px;
 }
